# beticoin

./: .appveyor.yml  .cirrus.yml  .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  autogen.sh  configure.ac  libbeticoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  beticoin.sln  beticoin_config.h  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
ci/: lint_run_all.sh  test_run_all.sh
contrib/: README.md  beticoin-cli.bash-completion  beticoin-tx.bash-completion  beticoind.bash-completion  filter-lcov.py  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  beticoin-conf.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  gitian-building.md  guix.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  beticoin-cli.1  beticoin-qt.1  beticoin-tx.1  beticoin-util.1  beticoin-wallet.1  beticoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  addrdb.cpp  (+163 more)
(+1209 files in other folders)
