dist_man1_MANS=

if BUILD_beticoinD
  dist_man1_MANS+=beticoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=beticoin-qt.1
endif

if BUILD_beticoin_CLI
  dist_man1_MANS+=beticoin-cli.1
endif

if BUILD_beticoin_TX
  dist_man1_MANS+=beticoin-tx.1
endif

if BUILD_beticoin_UTIL
  dist_man1_MANS+=beticoin-util.1
endif

if ENABLE_WALLET
if BUILD_beticoin_WALLET
  dist_man1_MANS+=beticoin-wallet.1
endif
endif
